Completed task service unit tests, updated Deadline
