# src/main/java/com/example/todolist/entities/Deadline.java
@@ -1,9 +1,20 @@
 package com.example.todolist.entities;
 
+
+import java.util.Arrays;
+import java.util.List;
+
 public enum Deadline {
-        today,
-        week,
-        someday
+        TODAY,
+        WEEK,
+        SOMEDAY;
+
+        public static List<String> getNames() {
+                return Arrays.stream(Deadline.values())
+                        .map(Enum::name)
+                        .toList();
+        }
+
 }
 
 
